--- a/Ex-1/index.html
+++ b/Ex-1/index.html
@@ -23,7 +23,7 @@
       <div class="border p-4 my-3 rounded-3">
         <div class="row">
           <div class="col">
-            <h1 class="text-primary">Introduction</h1>
+            <h1 class="text-primary fw-bold">Introduction</h1>
             <p class="lead">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab
               sapiente quisquam tempore, ea inventore impedit asperiores ex iste
