--- a/Ex-3/index.html
+++ b/Ex-3/index.html
@@ -33,10 +33,10 @@
                 <div id="collapseOne" class="accordion-collapse collapse">
                     <div class="card-body">
                         <div class="row px-md-4">
-                            <div class="col-md-3 my-4 px-4">
+                            <div class="col-md-3 my-4 p-4">
                                 <img src="./assets/image/img2.png" alt="room" class="img-fluid">
                             </div>
-                            <div class="col-md-9 my-md-4">
+                            <div class="col-md-9 my-md-4 py-md-2">
                                 <div class="container">
                                     <p class="lead fw-bold p-2 text-primary">Lorem ipsum dolor sit amet consectetur adipisicing
                                         elit. Quaerat ipsum sequi, cumque, sapiente eligendi repellat placeat accusantium,
@@ -62,10 +62,10 @@
                 <div id="collapseTwo" class="accordion-collapse collapse">
                     <div class="card-body">
                         <div class="row px-md-4">
-                            <div class="col-md-3 my-4 px-4">
+                            <div class="col-md-3 my-4 p-4">
                                 <img src="./assets/image/img2.png" alt="room" class="img-fluid">
                             </div>
-                            <div class="col-md-9 my-md-4">
+                            <div class="col-md-9 my-md-4 pt-md-4">
                                 <div class="container">
                                 <div class="table-responsive">
                                     <table class="table table-bordered table-striped">
@@ -145,7 +145,7 @@
                         data-bs-toggle="collapse" data-bs-target="#collapseThree">3. What is CSS?</button>
                 </h2>
                 <div id="collapseThree" class="accordion-collapse collapse">
-                    <div class="card-body p-5">
+                    <div class="card-body p-3">
                         <p>CSS stands for Cascading Style Sheet. CSS allows you to specify various style properties for
                             a given HTML element such as colors, backgrounds, fonts etc. <a
                                 href="https://www.tutorialrepublic.com/css-tutorial/" target="_blank">Learn more.</a>
@@ -159,7 +159,7 @@
                         data-bs-toggle="collapse" data-bs-target="#collapseFour">4. What is HTML?</button>
                 </h2>
                 <div id="collapseFour" class="accordion-collapse collapse">
-                    <div class="card-body p-5">
+                    <div class="card-body p-3">
                         <p>HTML stands for HyperText Markup Language. HTML is the standard markup language for
                             describing the structure of web pages. <a
                                 href="https://www.tutorialrepublic.com/html-tutorial/" target="_blank">Learn more.</a>
@@ -173,7 +173,7 @@
                         data-bs-toggle="collapse" data-bs-target="#collapseFive">5. What is Bootstrap?</button>
                 </h2>
                 <div id="collapseFive" class="accordion-collapse collapse">
-                    <div class="card-body p-5">
+                    <div class="card-body p-3">
                         <p>Bootstrap is a sleek, intuitive, and powerful front-end framework for faster and easier web
                             development. It is a collection of CSS and HTML conventions. <a
                                 href="https://www.tutorialrepublic.com/twitter-bootstrap-tutorial/"
@@ -187,7 +187,7 @@
                         data-bs-toggle="collapse" data-bs-target="#collapseSix">6. What is CSS?</button>
                 </h2>
                 <div id="collapseSix" class="accordion-collapse collapse">
-                    <div class="card-body p-5">
+                    <div class="card-body p-3">
                         <p>CSS stands for Cascading Style Sheet. CSS allows you to specify various style properties for
                             a given HTML element such as colors, backgrounds, fonts etc. <a
                                 href="https://www.tutorialrepublic.com/css-tutorial/" target="_blank">Learn more.</a>
